--- a/.github/workflows/n1.yml
+++ b/.github/workflows/n1.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build x86 OpenWrt
+name: Build OpenWrt Huge
 
 on:
   repository_dispatch:
@@ -19,21 +19,21 @@ on:
         required: false
         default: 'false'
   #schedule:
-    #- cron: 15 16 * * 6
+    #- cron: 0 8 * * *
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: x86/lede-x86.config
+  CONFIG_FILE: armv8/lede-arm.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: x86_64
-  PRODUCT_NAME: x86_64
+  FILE_NAME: openwrt_armvirt
+  PRODUCT_NAME: openwrt_armvirt
 
 jobs:
   build:
@@ -83,11 +83,11 @@ jobs:
         sudo -E systemctl daemon-reload
         sudo -E apt clean && sudo -E apt autoclean
         sudo timedatectl set-timezone "$TZ"
-        # sudo mkdir -p /mnt/workdir
-        # sudo chown $USER:$GROUPS /mnt/workdir
+        # sudo mkdir -p /builder
+        # sudo chown $USER:$GROUPS /builder
         echo "status=success" >> ${GITHUB_OUTPUT}
         df -Th
-
+        
     - name: Create Swap
       run: |
         sudo dd if=/dev/zero of=/mnt/swapfile bs=1M count=8192
@@ -125,6 +125,15 @@ jobs:
         echo "useVersionInfo=$useVersionInfo" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "DATE1=$(date "+%Y-%m-%d")" >> $GITHUB_ENV
+        
+    #- name: Cache Toolchain
+      #uses: klever1988/cachewrtbuild@main
+      #with:
+        #ccache: false
+        #skip: true
+        #toolchain: true
+        #clean: false
+        #prefix: ${{ github.workspace }}/openwrt
 
     - name: Load custom feeds
       run: |
@@ -195,10 +204,10 @@ jobs:
       id: organize
       if: steps.compile.outputs.status == 'success' && !cancelled()
       run: |
-        cd $GITHUB_WORKSPACE
-        tar -zcvf Packages.tar.gz openwrt/bin/packages
-        cp Packages.tar.gz openwrt/bin/targets/*/*
-        cd openwrt/bin/targets/*/*
+        cd $GITHUB_WORKSPACE/openwrt/bin/packages
+        tar -zcvf Packages.tar.gz ./*
+        cp Packages.tar.gz $GITHUB_WORKSPACE/openwrt/bin/targets/*/*
+        cd $GITHUB_WORKSPACE/openwrt/bin/targets/*/*
         rm -rf packages
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> ${GITHUB_OUTPUT}
@@ -210,22 +219,40 @@ jobs:
         name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
 
-    - name: Create release
+    - name: Package Armvirt as OpenWrt
+      if: steps.compile.outputs.status == 'success' && !cancelled()
+      uses: ophub/flippy-openwrt-actions@main
+      env:
+        OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
+        PACKAGE_SOC: s905d
+        WHOAMI: wuyiwangzi
+        KERNEL_VERSION_NAME: 6.6.y
+        KERNEL_AUTO_LATEST: true
+        #OPENWRT_VER: R21.7.26
+        ENABLE_WIFI_K504: 1
+        ENABLE_WIFI_K510: 0
+  
+    - name: Upload artifact to Actions
+      uses: kittaakos/upload-artifact-as-is@master
+      if: env.PACKAGED_STATUS == 'success' && env.UPLOAD_FIRMWARE == 'true' && !cancelled()
+      with:
+        path: ${{ env.PACKAGED_OUTPUTPATH }}/
+
+    - name: Upload OpenWrt Firmware to Release
       id: release
-      uses: ncipollo/release-action@main
+      uses: ncipollo/release-action@v1
+      if: env.PACKAGED_STATUS == 'success' && env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
         name: R${{ env.DATE }} for ${{ env.PRODUCT_NAME }}
         allowUpdates: true
-        removeArtifacts: true
         tag: ${{ env.FILE_NAME }}
         commit: main
         token: ${{ secrets.RELEASES_TOKEN }}
+        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         body: |
-          - X86_64
-          - 默认IP：192.168.1.1 默认密码：password
-          - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
+          默认IP： 192.168.1.1 默认密码： password
+          当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           ${{ env.useVersionInfo }}
-        artifacts: ${{ env.FIRMWARE }}/*
 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
