--- a/.github/workflows/n1.yml
+++ b/.github/workflows/n1.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build OpenWrt Huge
+name: Build N1 OpenWrt
 
 on:
   repository_dispatch:
