--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -139,10 +139,10 @@ jobs:
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
 
-    # - name: Load custom configuration
-    #   run: |
-    #     [ -e files ] && mv files openwrt/files
-    #     [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+    - name: Load custom configuration
+      run: |
+        [ -e files ] && mv files openwrt/files
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
     #     chmod +x $DIY_P2_SH
     #     cd openwrt
     #     $GITHUB_WORKSPACE/$DIY_P2_SH
