--- a/.github/workflows/n1.yml
+++ b/.github/workflows/n1.yml
@@ -224,7 +224,7 @@ jobs:
       if: steps.compile.outputs.status == 'success' && !cancelled()
       uses: ophub/flippy-openwrt-actions@main
       env:
-        OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
+        OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*rootfs.tar.gz
         PACKAGE_SOC: s905d
         WHOAMI: wuyiwangzi
         KERNEL_VERSION_NAME: 6.6.y
