--- a/.github/workflows/n1.yml
+++ b/.github/workflows/n1.yml
@@ -32,8 +32,8 @@ env:
   UPLOAD_FIRMWARE: false
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: openwrt_armvirt
-  PRODUCT_NAME: openwrt_armvirt
+  FILE_NAME: armv8
+  PRODUCT_NAME: armv8
 
 jobs:
   build:
