--- a/.github/workflows/n1.yml
+++ b/.github/workflows/n1.yml
@@ -225,7 +225,7 @@ jobs:
       uses: ophub/flippy-openwrt-actions@main
       env:
         OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*rootfs.tar.gz
-        PACKAGE_SOC: s905d
+        PACKAGE_SOC: s905d_qemu
         WHOAMI: wuyiwangzi
         KERNEL_VERSION_NAME: 6.6.y
         KERNEL_AUTO_LATEST: true
