--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -220,7 +220,7 @@ jobs:
         removeArtifacts: true
         tag: ${{ env.FILE_NAME }}
         commit: main
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.RELEASES_TOKEN }}
         body: |
           - X86_64
           - 默认IP：192.168.1.1 默认密码：password
