--- a/.github/workflows/n1.yml
+++ b/.github/workflows/n1.yml
@@ -225,9 +225,9 @@ jobs:
       uses: ophub/flippy-openwrt-actions@main
       env:
         OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*rootfs.tar.gz
-        PACKAGE_SOC: s905d_qemu
+        PACKAGE_SOC: s905d
         WHOAMI: wuyiwangzi
-        KERNEL_VERSION_NAME: 6.1.y_5.15.y
+        KERNEL_VERSION_NAME: 5.4.y
         KERNEL_AUTO_LATEST: true
         #OPENWRT_VER: R21.7.26
         ENABLE_WIFI_K504: 1
