--- a/.github/workflows/arm.yml
+++ b/.github/workflows/arm.yml
@@ -248,7 +248,7 @@ jobs:
         allowUpdates: true
         tag: ${{ env.FILE_NAME }}
         commit: main
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.RELEASES_TOKEN }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*,${{ env.FIRMWARE }}/*
         body: |
           默认IP： 192.168.1.1 默认密码： password
