--- a/.github/workflows/arm.yml
+++ b/.github/workflows/arm.yml
@@ -249,7 +249,7 @@ jobs:
         tag: ${{ env.FILE_NAME }}
         commit: main
         token: ${{ secrets.RELEASES_TOKEN }}
-        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*,${{ env.FIRMWARE }}/*
+        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         body: |
           默认IP： 192.168.1.1 默认密码： password
           当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
