--- a/.github/workflows/n1.yml
+++ b/.github/workflows/n1.yml
@@ -95,6 +95,7 @@ jobs:
       with:
         name: R${{ env.DATE }} for ${{ env.PRODUCT_NAME }}
         allowUpdates: true
+        replacesArtifacts: false
         tag: ${{ env.FILE_NAME }}
         commit: main
         token: ${{ secrets.RELEASES_TOKEN }}
