--- a/.github/workflows/n1.yml
+++ b/.github/workflows/n1.yml
@@ -75,7 +75,7 @@ jobs:
         OPENWRT_ARMVIRT: https://github.com/wuyiwangzi/flippy/releases/download/armv8/openwrt-armvirt-64-generic-rootfs.tar.gz
         PACKAGE_SOC: s905d
         WHOAMI: wuyiwangzi
-        KERNEL_VERSION_NAME: 5.4.y_6.12.y
+        KERNEL_VERSION_NAME: 5.4.y
         KERNEL_AUTO_LATEST: true
         #OPENWRT_VER: R21.7.26
         ENABLE_WIFI_K504: 1
