--- a/.github/workflows/arm.yml
+++ b/.github/workflows/arm.yml
@@ -227,6 +227,7 @@ jobs:
         OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*rootfs.tar.gz
         PACKAGE_SOC: s905d
         WHOAMI: wuyiwangzi
+        KERNEL_REPO_URL: ophub/kernel
         KERNEL_VERSION_NAME: 6.12.y
         KERNEL_AUTO_LATEST: true
         #OPENWRT_VER: R21.7.26
