--- a/.github/workflows/arm.yml
+++ b/.github/workflows/arm.yml
@@ -225,7 +225,7 @@ jobs:
       uses: ophub/flippy-openwrt-actions@main
       env:
         OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*rootfs.tar.gz
-        PACKAGE_SOC: s905d
+        PACKAGE_SOC: s905d_r68s
         WHOAMI: wuyiwangzi
         KERNEL_REPO_URL: ophub/kernel
         KERNEL_VERSION_NAME: 6.6.y
