Revert "切换到分支"
This reverts commit bca9926d2009d4c8157c1ae97dbb6a22ee02be55.

--- a/.github/workflows/arm.yml
+++ b/.github/workflows/arm.yml
@@ -23,7 +23,7 @@ on:
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: 20251001
+  REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: armv8/.config.arm
   DIY_P1_SH: diy-part1.sh
