--- a/.github/workflows/arm.yml
+++ b/.github/workflows/arm.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build n1 OpenWrt
+name: Build arm OpenWrt
 
 on:
   repository_dispatch:
