标记为最新

--- a/.github/workflows/arm.yml
+++ b/.github/workflows/arm.yml
@@ -247,6 +247,7 @@ jobs:
       with:
         name: R${{ env.DATE }} for ${{ env.PRODUCT_NAME }}
         allowUpdates: true
+        makeLatest: true
         tag: ${{ env.FILE_NAME }}
         commit: main
         token: ${{ secrets.RELEASES_TOKEN }}
