--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -217,6 +217,7 @@ jobs:
       with:
         name: R${{ env.DATE }} for ${{ env.PRODUCT_NAME }}
         allowUpdates: true
+        makeLatest: true
         removeArtifacts: true
         tag: ${{ env.FILE_NAME }}
         commit: main
