--- a/.github/workflows/n1.yml
+++ b/.github/workflows/n1.yml
@@ -73,7 +73,7 @@ jobs:
       uses: ophub/flippy-openwrt-actions@main
       env:
         OPENWRT_ARMVIRT: https://github.com/wuyiwangzi/flippy/releases/download/armv8/openwrt-armsr-armv8-generic-rootfs.tar.gz
-        PACKAGE_SOC: s905d_r68s
+        PACKAGE_SOC: s905d_r68s_r66s
         WHOAMI: wuyiwangzi
         KERNEL_REPO_URL: ophub/kernel
         KERNEL_VERSION_NAME: 6.6.y
